--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,9 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+	        		<li><a href="/research">Research</a></li>
+	        		<li><a href="/music">Music</a></li>
+				<li><a href="/activism">Activism</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -21,8 +22,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:ndbkeyes@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/ndbkeyes">github.com/ndbkeyes</a></li>
 				</ul>
 			</footer>
 		</body>
