--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   float: left;
-  width: 20%;
+  width: 100px;
 }
 
 /* On mouse-over, add a deeper shadow */
