--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .card-img {
   display: block;
   margin: auto;
-  width: 100%;
+  height: 65%;
 }
 
 .div-link {
