--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   transition: 0.3s;
   float: left;
   width: 25%;
+  height: 25%;
   margin: 20px;
 }
 
