--- a/css/main.css
+++ b/css/main.css
@@ -249,7 +249,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   float: left;
   width: 25%;
   height: 25%;
-  margin: 20px;
+  margin: 5%;
 }
 
 /* On mouse-over, add a deeper shadow */
