--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 }
 
 .card-img {
-  height: 65%;
+  max-height: 65%;
+  max-width: 20%;
 }
 
 .div-link {
