--- a/css/main.css
+++ b/css/main.css
@@ -264,6 +264,10 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .card-img {
   max-width: 100%;
+  object-fit: contain;
+  border-style: solid;
+  border-width: 5px;
+  border-color: red;
 }
 
 .div-link {
