--- a/css/main.css
+++ b/css/main.css
@@ -247,9 +247,9 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   float: left;
-  width: 20%;
-  height: 25%;
-  margin: 5%;
+  width: 25%;
+  max-height: 30%;
+  margin: 2%;
 }
 
 /* On mouse-over, add a deeper shadow */
